Projet_GL/src/test/deca/codegen/invalid/division_zero3.deca
// Division par float zéro

{
    float a = 1.0;
    float b = 0.0;
    a = a/b;
    
}
